[package]
name = "sr-io"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
#sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk"}
#sgx_tseal = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk" }
#sgx_rand = { git = "https://github.com/baidu/rust-sgx-sdk" }
#sgx_tcrypto = { git = "https://github.com/baidu/rust-sgx-sdk" }
#rust-crypto = { git = "https://github.com/baidu/rust-sgx-sdk" }
#rust-base58 = { git = "https://github.com/baidu/rust-sgx-sdk" }
#sgx_serialize = { git = "https://github.com/baidu/rust-sgx-sdk" }
#sgx_crypto_helper = { package="sgx_tcrypto_helper", git = "https://github.com/baidu/rust-sgx-sdk" }

[target.'cfg(target_env = "sgx")'.dependencies]
#sgx_crypto_helper = { package="sgx_tcrypto_helper", git = "https://github.com/baidu/rust-sgx-sdk" }

[dependencies]
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
primitives = { package = "substrate-primitives", path = "../primitives", default-features = false }
codec = { package = "parity-codec", version = "3.5.1", default-features = false }
hash-db = { version = "0.12", default-features = false }
libsecp256k1 = { version = "0.2.1", optional = true }
tiny-keccak = { version = "1.4.2", optional = true }
environmental = { version = "1.0.1", default-features= false, optional = true }
substrate-state-machine = { path = "../state-machine", optional = true }
trie = { package = "substrate-trie", path = "../trie", optional = true }
#
#twox-hash = { git = "https://github.com/shepmaster/twox-hash.git", branch="no-std", default-features = false, optional = true }
twox-hash = { git = "https://github.com/shepmaster/twox-hash.git", optional = true }

[features]
default = ["std"]
std = [
	"primitives/std",
	"codec/std",
	"rstd/std",
	"hash-db/std",
	"trie",
	"environmental/std",
	"substrate-state-machine",
	"libsecp256k1",
	"tiny-keccak",
]
nightly = []
strict = []
wasm-nice-panic-message = []
no_panic_handler = []
no_oom = []

#TODO: rename feature to sgx
no_std_host = [
	"twox-hash",
	"primitives/sgx",
	"environmental"
]
