[package]
name = "sr-io"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
primitives = { package = "substrate-primitives", path = "../primitives", default-features = false }
codec = { package = "parity-codec", version = "3.5.1", default-features = false }
hash-db = { version = "0.12", default-features = false }
libsecp256k1 = { version = "0.2.1", optional = true }
tiny-keccak = { version = "1.4.2", optional = true }
environmental = { version = "1.0.1", default-features= false, optional = true }
substrate-state-machine = { path = "../state-machine", optional = true }
trie = { package = "substrate-trie", path = "../trie", optional = true }
twox-hash = { git = "https://github.com/shepmaster/twox-hash.git", default-features = false, optional = true }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk", optional = true }

[features]
default = ["std"]
std = [
	"primitives/std",
	"codec/std",
	"rstd/std",
	"hash-db/std",
	"trie",
	"environmental/std",
	"substrate-state-machine",
	"libsecp256k1",
	"tiny-keccak",
	"twox-hash/std"
]
nightly = []
strict = []
wasm-nice-panic-message = []
no_panic_handler = []
no_oom = []
sgx = [
	"sgx_tstd",
	"twox-hash",
	"primitives/sgx",
	"environmental"
]
debug = []
