[package]
name = "sr-sandbox"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
wasmi = { git = "https://github.com/paritytech/wasmi.git", default-features = false, optional = true }
#wasmi-validation = { version = "0.1.0", default-features = false, optional = true }
primitives = { package = "substrate-primitives", path = "../primitives", default-features = false }
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk", optional = true }
codec = { package = "parity-codec", version = "3.2", default-features = false }

[dev-dependencies]
wabt = "~0.7.4"
assert_matches = "1.1"

[features]
default = ["std"]
std = [
	"wasmi/std",
	"primitives/std",
	"rstd/std",
	"codec/std",
]
nightly = []
strict = []
sgx = [
	"sgx_tstd",
	"wasmi/core",
#	"wasmi-validation/core",
	"primitives/sgx",
]	

