[package]
name = "sr-sandbox"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
#wasmi = { git = "https://github.com/baidu/rust-sgx-sdk", default-features = false, optional = true }
wasmi = { git = "https://github.com/paritytech/wasmi.git", rev = "5be300c99f81603f0e845443800418323d9b073a", default-features = false, optional = true }
#wasmi = { version = "0.4.3", default-features = false, optional = true }
#wasmi-validation = { version = "0.1.0", default-features = false, optional = true }
primitives = { package = "substrate-primitives", path = "../primitives", default-features = false }
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk", optional = true }
codec = { package = "parity-codec", version = "3.2", default-features = false }
runtime-io = { package = "sr-io", path = "../../core/sr-io", default-features = false }

[dev-dependencies]
wabt = "~0.7.4"
assert_matches = "1.1"

[features]
default = ["std"]
std = [
	"wasmi/std", # !!rust-sgx-sdk doesnt have this feature
#	"wasmi",
	"primitives/std",
	"rstd/std",
	"codec/std",
]
nightly = []
strict = []
sgx = [
	"sgx_tstd",
	"wasmi/core", # !!rust-sgx-sdk doesnt have this feature
#	"wasmi",
#	"wasmi-validation/core",
	"primitives/sgx",
	"runtime-io/sgx"
]	

